kubernetes/celery-flower-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-flower
  namespace: graildient-descent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-flower
  template:
    metadata:
      labels:
        app: celery-flower
    spec:
      containers:
        - name: celery-flower
          image: mher/flower
          ports:
            - containerPort: 5555
          resources:
            limits:
              memory: "256Mi"
              cpu: "300m"
            requests:
              memory: "128Mi"
              cpu: "100m"
          readinessProbe:
            httpGet:
              path: /
              port: 5555
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 5555
            initialDelaySeconds: 45
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: celery-flower
  namespace: graildient-descent
spec:
  selector:
    app: celery-flower
  ports:
    - port: 5555
      targetPort: 5555
      nodePort: 30002
  type: NodePort
